--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,15 @@
-*{
-  padding: 0;
-  margin: 0;
-}
+$spacer: 1rem !default;
+$spacers: () !default;
+$spacers: map-merge(
+  (
+    0: 0,
+    1: ($spacer * 1),
+    2: ($spacer * 2),
+    3: ($spacer * 3),
+    4: ($spacer * 4),
+    5: ($spacer * 5),
+    6: ($spacer * 6),
+    7: ($spacer * 7)
+  ),
+  $spacers
+);
