--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,5 @@
-@import "variables";
 @import "reset";
+@import "variables";
+@import "../node_modules/bootstrap-4-grid/scss/grid.scss";
 @import "base";
 @import "layout";
