--- a/css/styles.css
+++ b/css/styles.css
@@ -4951,8 +4951,10 @@ body {
   font-weight: normal;
 }
 
-.container {
-  max-width: 1475px;
+@media screen and (min-width: 1600px) {
+  .container {
+    max-width: 1475px;
+  }
 }
 
 .h1 {
