--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -12,7 +12,9 @@ body{
 }
 
 .container{
-  max-width: 1475px;
+  @media screen and (min-width: 1600px){
+    max-width: 1475px;
+  }
 }
 
 $sizes: 15rem, 13.6rem, 8rem, 5.6rem, 5rem, 4rem, 3.6rem, 2.6rem, 1.8rem;
