--- a/css/styles.css
+++ b/css/styles.css
@@ -4939,7 +4939,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 html {
-  font-size: 10px;
+  font-size: 5px;
 }
 
 body {
@@ -5032,7 +5032,7 @@ hr.vertical {
 }
 
 .hero {
-  height: 100vh;
+  height: 400px;
   overflow: hidden;
   position: relative;
 }
@@ -5086,16 +5086,21 @@ hr.vertical {
 
 .lp-preview {
   position: relative;
-  height: 85vh;
+  height: 400px;
   overflow: hidden;
   border-radius: 2rem 2rem 0 0;
 }
 
 .lp-preview iframe {
   width: 100%;
-  height: 100%;
+  min-height: 800px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+img {
+  display: block;
+  margin: 0 auto;
 }
 
 .footer {
