--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,5 +1,5 @@
 .hero{
-  height: 100vh;
+  height: 400px;
   overflow: hidden;
   position: relative;
   video{
@@ -47,15 +47,20 @@
 
 .lp-preview{
   position: relative;
-  height: 85vh;
+  height: 400px;
   overflow: hidden;
   border-radius: 2rem 2rem 0 0;
 
   iframe{
     width: 100%;
-    height: 100%;
+    min-height: 800px;
     object-fit: cover;
   }
+}
+
+img{
+  display: block;
+  margin: 0 auto;
 }
 
 .footer{
