--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -2,13 +2,14 @@
   height: 400px;
   overflow: hidden;
   position: relative;
-  video{
+  &__img{
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
   }
 
   .ldBar{
