--- a/css/styles.css
+++ b/css/styles.css
@@ -4949,6 +4949,7 @@ body {
   font-size: 1.4rem;
   line-height: 1;
   font-weight: normal;
+  min-width: 768px;
 }
 
 @media screen and (min-width: 1600px) {
